--- a/templates/intervention_access.html
+++ b/templates/intervention_access.html
@@ -94,88 +94,80 @@
                             <h4>Introductory</h4>
                             <p>Start here to learn how the intervention works.</p>
                             <div class="link-list">
-                                <a class="btn btn-primary" href="{% url 'intervention_challenge_1' %}">Challenge 1: Introduction</a>
-                                <a class="btn btn-primary" href="{% url 'intervention_challenge_2' %}">Challenge 2: Contents</a>
-                                <a class="btn btn-primary" href="{% url 'intervention_challenge_3' %}">Challenge 3: Game</a>
-                                <a class="btn btn-primary" href="{% url 'intervention_challenge_4' %}">Challenge 4: Review</a>
-                                <a class="btn btn-primary" href="{% url 'intervention_challenge_5' %}">Challenge 5: Self-efficacy</a>
+                                <a class="btn btn-primary" href="{% url 'intervention_challenge_1' %}">Challenge 1: Physical Activity</a>
+                                <a class="btn btn-primary" href="{% url 'intervention_challenge_2' %}">Challenge 2: Rethinking Movement</a>
+                                <a class="btn btn-primary" href="{% url 'intervention_challenge_3' %}">Challenge 3: Importance</a>
+                                <a class="btn btn-primary" href="{% url 'intervention_challenge_4' %}">Challenge 4: How to do (Part 1)</a>
+                                <a class="btn btn-primary" href="{% url 'intervention_challenge_5' %}">Challenge 5: How to do (Part 2)</a>
+                                <a class="btn btn-primary" href="{% url 'intervention_challenge_6' %}">Challenge 6: How to do (Part 3)</a>
                             </div>
                         </div>
                         <div class="category-card">
                             <h4>General Education</h4>
                             <p>Foundational knowledge about physical activity.</p>
                             <div class="link-list">
-                                <a class="btn btn-primary" href="{% url 'ge_challenge_1' %}">Challenge 1: Physical Activity</a>
-                                <a class="btn btn-primary" href="{% url 'ge_challenge_2' %}">Challenge 2: Importance</a>
-                                <a class="btn btn-primary" href="{% url 'ge_challenge_3' %}">Challenge 3: How to do (Part 1)</a>
-                                <a class="btn btn-primary" href="{% url 'ge_challenge_4' %}">Challenge 4: How to do (Part 2)</a>
-                                <a class="btn btn-primary" href="{% url 'ge_challenge_5' %}">Challenge 5: How to do (Part 3)</a>
-                                <a class="btn btn-primary" href="{% url 'ge_challenge_6' %}">Challenge 6: Review</a>
+                                <a class="btn btn-primary" href="{% url 'ge_challenge_1' %}">Challenge 1: Introduction</a>
+                                <a class="btn btn-primary" href="{% url 'ge_challenge_2' %}">Challenge 2: Contents</a>
+                                <a class="btn btn-primary" href="{% url 'ge_challenge_3' %}">Challenge 3: Game</a>
+                                <a class="btn btn-primary" href="{% url 'ge_challenge_4' %}">Challenge 4: Review</a>
+                                <a class="btn btn-primary" href="{% url 'ge_challenge_5' %}">Challenge 5: Self-efficacy Survey</a>
                             </div>
                         </div>
                         <div class="category-card">
                             <h4>Work-related Physical Activity</h4>
                             <p>Tips and challenges for being active at work.</p>
                             <div class="link-list">
-                                <a class="btn btn-primary" href="{% url 'wr_challenge_7' %}">Challenge 7: Learning</a>
-                                <a class="btn btn-primary" href="{% url 'wr_challenge_8' %}">Challenge 8: Easy Task</a>
-                                <a class="btn btn-primary" href="{% url 'wr_challenge_9' %}">Challenge 9: Story</a>
-                                <a class="btn btn-primary" href="{% url 'wr_challenge_10' %}">Challenge 10: Fitness Game</a>
-                                <a class="btn btn-primary" href="{% url 'wr_challenge_11' %}">Challenge 11: Technique</a>
+                                <a class="btn btn-primary" href="{% url 'wr_challenge_6' %}">Challenge 6: Learning</a>
+                                <a class="btn btn-primary" href="{% url 'wr_challenge_7' %}">Challenge 7: Easy Task</a>
+                                <a class="btn btn-primary" href="{% url 'wr_challenge_8' %}">Challenge 8: Story</a>
+                                <a class="btn btn-primary" href="{% url 'wr_challenge_9' %}">Challenge 9: Game</a>
+                                <a class="btn btn-primary" href="{% url 'wr_challenge_10' %}">Challenge 10: Technique</a>
                             </div>
                         </div>
                         <div class="category-card">
                             <h4>Transport-related Physical Activity</h4>
                             <p>Incorporate movement into your travel.</p>
                             <div class="link-list">
-                                <a class="btn btn-primary" href="{% url 'tr_challenge_12' %}">Challenge 12: Learning</a>
-                                <a class="btn btn-primary" href="{% url 'tr_challenge_13' %}">Challenge 13: Easy Task</a>
-                                <a class="btn btn-primary" href="{% url 'tr_challenge_14' %}">Challenge 14: Story</a>
-                                <a class="btn btn-primary" href="{% url 'tr_challenge_15' %}">Challenge 15: Transport Game</a>
-                                <a class="btn btn-primary" href="{% url 'tr_challenge_16' %}">Challenge 16: Technique</a>
+                                <a class="btn btn-primary" href="{% url 'tr_challenge_11' %}">Challenge 11: Learning</a>
+                                <a class="btn btn-primary" href="{% url 'tr_challenge_12' %}">Challenge 12: Easy Task</a>
+                                <a class="btn btn-primary" href="{% url 'tr_challenge_13' %}">Challenge 13: Story</a>
+                                <a class="btn btn-primary" href="{% url 'tr_challenge_14' %}">Challenge 14: Game</a>
+                                <a class="btn btn-primary" href="{% url 'tr_challenge_15' %}">Challenge 15: Technique</a>
                             </div>
                         </div>
                         <div class="category-card">
                             <h4>Domestic-related Activity</h4>
                             <p>Be active in and around your home.</p>
                             <div class="link-list">
-                                <a class="btn btn-primary" href="{% url 'dom_challenge_17' %}">Challenge 17: Learning</a>
-                                <a class="btn btn-primary" href="{% url 'dom_challenge_18' %}">Challenge 18: Easy Task</a>
-                                <a class="btn btn-primary" href="{% url 'dom_challenge_19' %}">Challenge 19: Story</a>
-                                <a class="btn btn-primary" href="{% url 'dom_challenge_20' %}">Challenge 20: Domestic Game</a>
-                                <a class="btn btn-primary" href="{% url 'dom_challenge_21' %}">Challenge 21: Technique</a>
+                                <a class="btn btn-primary" href="{% url 'dom_challenge_16' %}">Challenge 16: Learning</a>
+                                <a class="btn btn-primary" href="{% url 'dom_challenge_17' %}">Challenge 17: Easy Task</a>
+                                <a class="btn btn-primary" href="{% url 'dom_challenge_18' %}">Challenge 18: Story</a>
+                                <a class="btn btn-primary" href="{% url 'dom_challenge_19' %}">Challenge 19: Game</a>
+                                <a class="btn btn-primary" href="{% url 'dom_challenge_20' %}">Challenge 20: Technique</a>
                             </div>
                         </div>
                         <div class="category-card">
                             <h4>Leisure-related Physical Activity</h4>
                             <p>Enjoyable activities during free time.</p>
                             <div class="link-list">
-                                <a class="btn btn-primary" href="{% url 'leisure_challenge_22' %}">Challenge 22: Learning</a>
-                                <a class="btn btn-primary" href="{% url 'leisure_challenge_23' %}">Challenge 23: Easy Task</a>
-                                <a class="btn btn-primary" href="{% url 'leisure_challenge_24' %}">Challenge 24: Story</a>
-                                <a class="btn btn-primary" href="{% url 'leisure_challenge_25' %}">Challenge 25: Leisure Game</a>
-                                <a class="btn btn-primary" href="{% url 'leisure_challenge_26' %}">Challenge 26: Technique</a>
+                                <a class="btn btn-primary" href="{% url 'leisure_challenge_21' %}">Challenge 21: Learning</a>
+                                <a class="btn btn-primary" href="{% url 'leisure_challenge_22' %}">Challenge 22: Easy Task</a>
+                                <a class="btn btn-primary" href="{% url 'leisure_challenge_23' %}">Challenge 23: Learning Yoga</a>
+                                <a class="btn btn-primary" href="{% url 'leisure_challenge_24' %}">Challenge 24: Yoga Practice 1</a>
+                                <a class="btn btn-primary" href="{% url 'leisure_challenge_25' %}">Challenge 25: Yoga Practice 2</a>
+                                <a class="btn btn-primary" href="{% url 'leisure_challenge_26' %}">Challenge 26: Game</a>
+                                <a class="btn btn-primary" href="{% url 'leisure_challenge_27' %}">Challenge 27: Technique</a>
                             </div>
                         </div>
                         <div class="category-card">
                             <h4>Mindfulness</h4>
                             <p>Cultivate awareness to support activity.</p>
                             <div class="link-list">
-                                <a class="btn btn-primary" href="{% url 'mindfulness_challenge_27' %}">Challenge 27: Learning</a>
-                                <a class="btn btn-primary" href="{% url 'mindfulness_challenge_28' %}">Challenge 28: Practice</a>
-                                <a class="btn btn-primary" href="{% url 'mindfulness_challenge_29' %}">Challenge 29: At Work</a>
-                                <a class="btn btn-primary" href="{% url 'mindfulness_challenge_30' %}">Challenge 30: In Transport</a>
-                                <a class="btn btn-primary" href="{% url 'mindfulness_challenge_31' %}">Challenge 31: In Domestic Setting</a>
-                                <a class="btn btn-primary" href="{% url 'mindfulness_challenge_32' %}">Challenge 32: In Leisure</a>
-                            </div>
-                        </div>
-                        <div class="category-card">
-                            <h4>Yoga</h4>
-                            <p>Gentle movement and flexibility practices.</p>
-                            <div class="link-list">
-                                <a class="btn btn-primary" href="{% url 'yoga_challenge_33' %}">Challenge 33: Learning</a>
-                                <a class="btn btn-primary" href="{% url 'yoga_challenge_34' %}">Challenge 34: Practice 1</a>
-                                <a class="btn btn-primary" href="{% url 'yoga_challenge_35' %}">Challenge 35: Practice 2</a>
+                                <a class="btn btn-primary" href="{% url 'mindfulness_challenge_28' %}">Challenge 28: Learning</a>
+                                <a class="btn btn-primary" href="{% url 'mindfulness_challenge_29' %}">Challenge 29: Easy Task</a>
+                                <a class="btn btn-primary" href="{% url 'mindfulness_challenge_30' %}">Challenge 30: Mindfulness Practice</a>
+                                <a class="btn btn-primary" href="{% url 'mindfulness_challenge_31' %}">Challenge 31: Game</a>
+                                <a class="btn btn-primary" href="{% url 'mindfulness_challenge_32' %}">Challenge 32: Technique</a>
                             </div>
                         </div>
                         <div class="category-card">
