--- a/templates/interventions/ge_challenge_2.html
+++ b/templates/interventions/ge_challenge_2.html
@@ -42,16 +42,17 @@
                 <a class="btn" href="{% url 'intervention_access' %}">Back to Intervention Access</a>
             </div>
             <div id="caption" class="caption">
-                <p>The good news for adults with obesity is that regular physical activity provides major health benefits, no matter how their weight changes. Of course, as you know, regular physical activity is helpful for weight loss, but that is not all! Physical activity is valuable for adults with obesity for at least four reasons reported by the U.S. Department of Health and Human Services.</p>
+                <p>Unfortunately, adults with obesity have multiple unique barriers to physical activity (e.g., weight perception). Also, personal, social, and environmental factors, such as low motivation, the influence of other people, and work environments, may act as barriers to physical activity.</p>
+                <p>To overcome barriers to physical activity, you are strongly encouraged to increase your belief in your ability to do physical activity, which is called “physical activity self-efficacy.” This is a special form of self-confidence for physical activity.</p>
+                <p>This intervention is designed to increase physical activity self-efficacy. Increasing your physical activity self-efficacy will promote physical activity! Based on behavioral theory and scientific evidence, the intervention is designed to provide capability-enhancing opportunities by using some engaging activities. Simply, you will:</p>
                 <ul>
-                    <li>First, moderate-to-vigorous physical activity has an additive effect on weight loss when combined with dietary restriction, compared to the diet only.</li>
-                    <li>Second, physical activity is helpful to prevent weight gain.</li>
-                    <li>Third, even if weight status of adults with obesity remains the same, they can experience major health benefits such as the relative reduction in incidence of a chronic disease or progression of a chronic disease they already have.</li>
-                    <li>Fourth, vigorous physical activity consistently produces great improvements in insulin sensitivity, blood pressure, and body composition in adults with obesity.</li>
+                    <li>listen to lectures,</li>
+                    <li>play simple games,</li>
+                    <li>watch videos,</li>
+                    <li>think about success, and</li>
+                    <li>practice some behavioral change techniques.</li>
                 </ul>
-                <p>It is important to know that increasing physical activity has other multiple health benefits, in addition to weight loss. While physical activity alone may not result in significant weight loss in the short term without also considering dieting, you are strongly encouraged to increase physical activity for these major health benefits.</p>
-                <p>Additionally, physical activity also gives you a chance to have fun, be with friends and family, enjoy the outdoors, feel more energetic and healthier, and improve fitness so you can more easily participate in additional physical activity, such as playing a sport. The health benefits from physical activity generally outweigh adverse outcomes such as the risk of injury. You can be physically active for any reasons that are meaningful to you.</p>
-                <p>Despite the benefits of physical activity, there is consistent evidence that most adults with obesity do not meet the 150 min per week of moderate-intensity physical activity recommended by public health guidelines. Moreover, there is evidence that adults with obesity tend to be physically active only when trying to lose weight. Simply understanding the benefits of an active lifestyle is insufficient to promote physical activity. This intervention can help you!</p>
+                <p>With this intervention, you can increase your belief in your ability to do physical activity and thus promote physical activity!</p>
             </div>
         </div>
     </div>
